--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,22 @@
-@charset "UTF-8";
+@charset "utf-8";
+body{
+  background: #edf0f1;
+  padding: 85px 0 0 0;
+}
+
+body,input,button{
+  font-family: 'Roboto', sans-serif;
+}
+
 header {
-  width: 100%;
-  height: 80px;
+
+  height: 85px;
   position: fixed;
   padding: 15px;
+
   top: 0;
   left: 0;
+  right: 0;
   z-index: 5;
   background:#25b99a;
   border-bottom-left-radius: 10px;
@@ -13,9 +24,14 @@ header {
   box-shadow: 0px 2px 4px rgba(44,62,80,0.15);
 }
 header input{
-  width: 510px;
+  width: 100%;
   height: 50px;
+  font-size: 15px;
+  font-weight: 400;
+  text-indent: 18px;
   float:left;
+
+  color: #fff;
   background: rgba(255,255,255,0.2);
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -32,4 +48,74 @@ header input{
   -o-appearance:none;
   appearance:none;
 
+}
+header input::-webkit-input-placeholder {
+  color: rgba(255,255,255,0.75);
+}
+
+header input:-moz-input-placeholder {
+  color: rgba(255,255,255,0.75);
+}
+
+header input::-moz-input-placeholder {
+  color: rgba(255,255,255,0.75);
+}
+
+header input:-ms-input-placeholder {
+  color: rgba(255,255,255,0.75);
+}
+
+header button{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top:15px;
+  right: 15px;
+  z-index: 2;
+  border-radius: 25px;
+  background: #fff;
+  border:0px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  -ms-appearance:none;
+  -o-appearance:none;
+  appearance:none;
+}
+
+header button svg{
+  width: 18px;
+  height: 18px;
+  float: left;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  margin:-8px 0 0 -8px;
+}
+
+header button svg .fill{
+  fill:#25b99a;
+}
+
+.container{
+  width:100%;
+  float:left;
+  padding: 15px;
+}
+
+ul.todo{
+  list-style-type: none;
+  float: left;
+}
+
+ul.todo li{
+  width:100%;
+  height: 50px;
+  background: #fff;
+  border-radius: 5px;
+  float: left;
+  box-shadow: 0px 1px 2px rgba(44,62,80,0.10)
+  margin:0 0 10px 0;
 }
